Implemented soft delete logic for files and trash listing endpoints